syntax = "proto3";


service ChatServerService {
  rpc Register (ChatClientRegisterRequest) returns (ChatClientRegisterReply);
}
message ChatClientRegisterRequest {
  string nick = 1;
  string url = 2;	
}
message ChatClientRegisterReply {
	bool ok = 1;
}